[package]
name = "db"
version = "0.1.0"
edition = "2021"

[features]
default = ["admin", "user"]
admin = ["dep:hypr_nango"]
user = []

[dependencies]
hypr_calendar = { path = "../calendar", package = "calendar", default-features = false }
hypr_db_utils = { path = "../db-utils", package = "db-utils" }
hypr_nango = { path = "../nango", package = "nango", optional = true }

anyhow = { workspace = true }
codes-iso-639 = { workspace = true }
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["v4", "serde"] }

libsql = { version = "0.6.0", features = [] }
tokio = { workspace = true, features = ["rt", "macros"] }

random_color = "1.0.0"
specta = { workspace = true, features = ["derive", "time", "serde_json"] }
