[package]
name = "db"
version = "0.1.0"
edition = "2021"

[features]
default = []
admin = ["hypr_nango"]
user = ["hypr_stt"]

[dependencies]
hypr_calendar = { path = "../calendar", package = "calendar", default-features = false }

hypr_nango = { path = "../nango", package = "nango", optional = true }
hypr_stt = { path = "../stt", package = "stt", default-features = false, optional = true }

anyhow = { workspace = true }
codes-iso-639 = { workspace = true }
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["v4", "serde"] }

libsql = { version = "0.6.0", features = [] }
tokio = { workspace = true, features = ["rt", "macros"] }

random_color = "1.0.0"
specta = { workspace = true, features = ["derive", "time", "serde_json"] }
