[package]
name = "diarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-onnx = { path = "../onnx", package = "onnx" }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
ndarray = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
hound = { workspace = true }
approx = { workspace = true }
