[package]
name = "diarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
hypr-onnx = { path = "../onnx", package = "onnx" }

anyhow = { workspace = true }
ndarray = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
approx = { workspace = true }
hound = { workspace = true }
reqwest = { workspace = true }
