[package]
name = "file"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = ["multipart"] }
thiserror = { workspace = true }

futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }

[dev-dependencies]
hypr-s3 = { path = "../../crates/s3", package = "s3" }
tempfile = { workspace = true }
testcontainers-modules = { workspace = true, features = ["minio"] }
