[package]
name = "gbnf"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }

[dev-dependencies]
gbnf-validator = { workspace = true }

colored = "3"
indoc = { workspace = true }
insta = { workspace = true }
